Fix alignment on section title header in browser mode

--- a/src/app/section-title/section-title.component.scss
+++ b/src/app/section-title/section-title.component.scss
@@ -15,6 +15,7 @@ h1 {
         px-8
         py-4 
         -mt-24
+        sm:-ml-4
 
         transform 
         -skew-y-2 
